
ENGINE
	Changed: Remove apache log directory on domain deletion
	Fixed: Logs directory is not created in some contexts ( apache_itk )

GUI
	Fixed: Admin logs default order ( last in, first out )
	Fixed: Customer data get updated even when passwords do not match ( reseller/user_edit.php )
	Fixed: Ignore orphaned users ( users without domain ) when editing reseller

INSTALLER
	Fixed: sysctl: permission denied on key 'net.ipv4.conf.all.promote_secondaries' ( vps )
	Fixed: /bin/cp: cannot overwrite non-directory when using symlinks ( replaced by rsync command )

PLUGINS
	Added: plugin_locked attribute which allow a plugin to lock another plugin for deletion
	Updated: Plugin API to version 0.2.15

TICKETS
	Fixed #1199: Defect - TR_PASSWORD_GENERATE placeholder is not parsed

------------------------------------------------------------------------------------------------------------------------
1.1.20
------------------------------------------------------------------------------------------------------------------------

2014-12-11: Laurent Declercq
	RELEASE i-MSCP 1.1.20

CONFIGS
	Fixed: Unable to start the Ftp server - unknown protocol: 'TLSv1.1' ( ProFTPD )

ENGINE
	Fixed: Unable to do any operation on the user web directory - ( immutable bit )

------------------------------------------------------------------------------------------------------------------------
1.1.19
------------------------------------------------------------------------------------------------------------------------

2014-12-11: Laurent Declercq
	RELEASE i-MSCP 1.1.19

CONFIGS
	Added: Sysctl configuration file for secondary IP promoting ( /etc/sysctl.d/imscp.conf file )
	Changed: SPF - Email treating level is now set to softfail instead of fail ( bind9 )
	Fixed: Access to error documents is forbiden in some contexts ( Apache )
	Fixed: A TLS fatal alert has been received - Wrong cipher suite ( ProFTPD )
	Fixed: Domain aliases and subdomains can't follow symlinks from customer homedir