@@ -142,7 +142,7 @@ unless($ret) {
 Please run the following commands from your console:
 EOF
 
-		if ($main::buildonly && (-f '/etc/ispcp/ispcp.conf' || -f '/usr/local/etc/ispcp/ispcp.conf')) {
+		if (-f '/etc/ispcp/ispcp.conf' || -f '/usr/local/etc/ispcp/ispcp.conf') {
 			$msg .= <<EOF
 
 	# cp -fR $main::{'INST_PREF'}/* /
