@@ -20,8 +20,11 @@ GUI
 	Fixed: Ignore orphaned users ( users without domain ) when editing reseller
 
 INSTALLER
+	Changed: Installation of the libapache2-mpm-itk package is now delayed to avoid dpkg configuration errors
 	Fixed: sysctl: permission denied on key 'net.ipv4.conf.all.promote_secondaries' ( vps )
 	Fixed: /bin/cp: cannot overwrite non-directory when using symlinks ( replaced by rsync command )
+	Fixed: Missing mcrypt PHP module error on fresh installation ( Trusty Tahr )
+	Fixed: Prefill debconf database for the dovecot-core/create-ssl-cert question ( Dovecot )
 
 PLUGINS
 	Added: plugin_locked attribute which allow a plugin to lock another plugin for deletion
